# battleflake

./: README.md
firmware/GY521_readCalibration_1/: GY521_readCalibration_1.ino
firmware/Sweep/: Sweep.ino
firmware/battle_StepperMotors/: battle_StepperMotors.ino  battle_TCP.h
firmware/battle_TCP/: battle_TCP.h  battle_TCP.ino
firmware/battle_firmware/: battle_firmware.h  battle_firmware.ino
firmware/cursed_230/: cursed_230.ino
firmware/esp32ServoTest/: esp32ServoTest.ino
firmware/randommotortest/: randommotortest.ino
firmware/testing_TEENSY/: testing_TEENSY.ino
src/battle_marker/: CMakeLists.txt  package.xml
src/battle_marker/include/: BattleMarker.h
src/battle_marker/src/: BattleMarker.cpp  battle_marker.cpp
src/battle_vision/: CMakeLists.txt  FindOpenCV.txt  package.xml
src/battle_vision/include/: BattleVision.h
src/battle_vision/src/: BattleVision.cpp  battle_vision.cpp
src/bb_msgs/: CMakeLists.txt  package.xml
src/bb_msgs/msg/: battleCmd.msg  bbVision2point.msg  networkStatus.msg  robotStatus.msg
src/gui/: CMakeLists.txt  README.md  package.xml
src/gui/include/: RosIntegration.h
src/gui/src/: RosIntegration.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
src/init_camera/: CMakeLists.txt
src/init_camera/include/init_camera/: camera_pubber.h
src/init_camera/src/: camera_pubber.cpp
src/microcontroller_comms/: CMakeLists.txt  README.md  package.xml
src/microcontroller_comms/include/: MicroComm.h  TeensyInit.h
src/microcontroller_comms/launch/: teensy_init.launch
src/microcontroller_comms/src/: MicroComm.cpp  TeensyInit.cpp  micro_comm.cpp  teensy_init.cpp
src/sb_vision/include/: HSVFilterNode.h
src/sb_vision/src/: camera_init.cpp
src/tcp_battle_server/: CMakeLists.txt  package.xml
src/tcp_battle_server/include/: BattleServer.h
src/tcp_battle_server/launch/: my_node.launch
src/tcp_battle_server/src/: BattleServer.cpp  battle_server.cpp
